--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
+# Web scraping dependencies
 requests>=2.28.0
 beautifulsoup4>=4.11.0
-pandas>=1.5.0
 urllib3>=1.26.0
 certifi>=2022.0.0
 lxml>=4.9.0
+
+# Data processing dependencies
+pandas>=1.5.0
+numpy>=1.21.0
+
+# Machine learning dependencies
+scikit-learn>=1.1.0
+
+# Deep learning dependencies
+tensorflow>=2.10.0
 
 # Optional GPU acceleration packages (install separately)
 # cudf>=22.0.0
